# computer-graphics

./: .gitignore  LICENSE  README.md
build-lab_06-Desktop_Qt_5_14_2_clang_64bit-Debug/: .qmake.stash  Makefile  moc_edgetablewidget.cpp  moc_mainwindow.cpp  moc_polygonwidget.cpp  ui_mainwindow.h
lab_01/: CMakeLists.txt  drawwindow.ui  lab_01.pro  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  mydottable.cpp  mydottable.h  mydrawwidget.cpp  mydrawwidget.h  mygraphicsview.h  mysolution.cpp  mysolution.h
lab_01/lab_01/: drawwindow.cpp  drawwindow.h  lab_01.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_02/: faceprocessing.cpp  faceprocessing.h  lab_02.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  mydraw.cpp  mydraw.h  mydrawwidget.cpp  mydrawwidget.h  mygraphicsview.h
lab_03/: lab_03.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  pixellinedraw.cpp  pixellinedraw.h
lab_04/: circle.cpp  circle.h  colorwidget.cpp  colorwidget.h  ellipse.cpp  ellipse.h  lab_04.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  pixeldrawer.cpp  pixeldrawer.h  profilewidget.cpp  profilewidget.h
lab_05/: edgetablewidget.cpp  lab_05.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  polygonwidget.cpp  polygonwidget.h
lab_06/: edgetablewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  polygonwidget.cpp  polygonwidget.h
lab_07/lab_07/: clipwidget.cpp  clipwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_08/lab_08/: clipwidget.cpp  clipwidget.h  lab_08.pro
